trying to fix search bar on iphone and ipad

--- a/root/styles/store-styles.css
+++ b/root/styles/store-styles.css
@@ -68,6 +68,7 @@ main {
 }
 
 .store-navigation input {
+    -webkit-appearance: none;
     border-radius: 10px;
 }
 
